fix: correct spacing

--- a/src/styles/ways-to-help/sectionSpreadTheWord.scss
+++ b/src/styles/ways-to-help/sectionSpreadTheWord.scss
@@ -5,7 +5,7 @@
   align-items: center;
 
   h2 {
-    margin-bottom: 80px;
+    margin-bottom: 60px;
     width: 100%;
   }
 
@@ -13,7 +13,7 @@
     width: 100%;
     display: flex;
     flex-direction: column;
-    gap: 50px;
+    gap: 40px;
   }
 
   .section-spread-the-word__text-line {
